--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-api-logger==1.1.14
 drf-yasg==1.21.7
+gunicorn==21.2.0
 inflection==0.5.1
 kombu==5.3.1
 packaging==23.1
