--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,16 @@ services:
       - web
       - redis
 
+  celery-beat:
+    build: .
+    command: celery -A config beat -l info
+    volumes:
+      - ./usr/src/app/
+    depends_on:
+      - web
+      - redis
+      - celery
+
   nginx:
      build:
        context: .
