--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
     build: .
     command: celery -A config beat -l info
     volumes:
-      - ./usr/src/app/
+      - .:/usr/src/app/
     depends_on:
       - web
       - redis
